tests/snapshots/test_runner__tests__compiler__typecheck__record_update_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a = { x: 2 }
let foo = (_: Integer): String => "Hello"
{
  let b = a.{ x.foo() } // expected Integer, got String
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_3.kk:4:15
  │
4 │   let b = a.{ x.foo() } // expected Integer, got String
  │               ^^^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
